 * The "Highlight timer edge" setting is back.

====Bug Fixes====
 * Fixed yet another issue with ElvUI's timer texts (they weren't going away when they should have been).


===v7.0.3===
 * Re-worked the Instance Type condition to make it more extensible in the future, and also added a few missing instance types to it.
 
====Bug Fixes====
 * Fixed an error that would be thrown if the whisper target ended up evaluating to nil.
 * TellMeWhen now duplicates Blizzard's code for the spell activation overlay (and has some additional code to get this to play nicely with Masque) so that it should hopefully no longer get blamed for tainting your action bars.
 * TellMeWhen also now duplicates Blizzard's code for dropdown menus, and improves upon it slightly. This should also help with taint issues.

===v7.0.2===
====Bug Fixes====
 * Fixed the missing slider value text for the Unit Level condition.
 * The Haste conditions no longer have a hard cap of 100%.
 * Fixed a false error that would display during configuring while using the [Range] DogTag.
 * Fixed an error relating to refreshing the tooltip for non-button widgets.

===v7.0.1===
 * Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.

====Bug Fixes====
 * Fixed a typo that was preventing Loss of Control icons from reporting their spell.
 * Fixed an error that would happen when upgrading a text layout that was previously unnamed: IconModule_Texts\Texts.lua:150 attempt to concatenate field 'Name' (a nil value)

===v7.0.0===

====Core Systems====
 * You can now create global groups that exist for all characters on your account. These groups can be enabled and disabled on a per-profile basis.
 * Text Layouts are now defined on an account-wide basis instead of being defined for individual profiles.
